2006-09-30  Olav Vitters  <olav@bkor.dhs.org>

	* update-master.pl: Correct the directory to be
	/var/lib/mailman/archives/public.

2006-08-02  Olav Vitters  <olav@bkor.dhs.org>

	* archive.pl: Force different different umask from within archive.pl
	to ensure created directories (by archive.pl) are readable by
	everyone.

2006-08-02  Olav Vitters  <olav@bkor.dhs.org>

	* archive.pl: Add -umask 022 option to mhonarc to ensure archives can
	be read.

2006-06-21  Ross Golder  <ross@golder.org>

	* Moved lists from '/var/mailman/web-archives' to
	'/mail/list-archives'.
	* Moved script base from '/var/mailman/mhonarc' to
	'/home/admin/mhonarc'.
	* update.pl: Changed 'ARCHIVE_DIR' to 'PRIVATE_ARCHIVE_DIR'.
	* update.pl: Uses mailman's 'list_lists' instead of relying
	on symlinks.

2005-02-06  Ross Golder  <ross@golder.org>

	* archive.pl: Now checks second and third Received header if it
	fails to parse the first. Added '--debug'.
	* archive.pl: Added 'start-time' and 'end-time' options.
