@@ -40,8 +40,8 @@ archive.pl - The main archiver; takes three options
 
  The variables at top:
 
-  $ARCHIVE_DIR = "/mail/list-archives/private";
-  $PUBLIC_ARCHIVE_DIR = "/mail/list-archives/public";
+  $ARCHIVE_DIR = "/var/lib/mailman/archives/private";
+  $PUBLIC_ARCHIVE_DIR = "/var/lib/mailman/archives/public";
   $PUBLIC_RCFILE = "/home/mailman/mhonarc/public-rc/base.rc";
   $PRIVATE_RCFILE = "/home/mailman/mhonarc/private-rc/base.rc";
 
