@@ -1,6 +1,6 @@
 $MAILMAN_HOME = "/usr/lib/mailman";
-$ARCHIVE_DIR = "/mail/list-archives/private";
-$PUBLIC_ARCHIVE_DIR = "/mail/list-archives/public";
+$ARCHIVE_DIR = "/var/lib/mailman/archives/private";
+$PUBLIC_ARCHIVE_DIR = "/var/lib/mailman/archives/public";
 $PUBLIC_RCFILE = "/home/admin/mhonarc/public-rc/base.rc";
 $PRIVATE_RCFILE = "/home/admin/mhonarc/private-rc/base.rc";
 $NAMAZU_HEAD = "/home/admin/namazu/index/NMZ.head"; 
