@@ -1,3 +1,0 @@
-MAILMAN_HOME=/usr/lib/mailman
-OLD_ARCHIVE_DIR=/var/lib/mailman/archives/private
-ARCHIVE_DIR=/mail/list-archives/private
